Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.0 Beta 1
-
None
-
-
405c73e49580cd5931576d60424e8f239dd51ef5
Description
https://codereview.qt-project.org/#/c/240252/ Update submodules on '5.12' in qt5 PS11
https://testresults.qt.io/coin/integration/qt/qt5/tasks/1538339575
agent:2018/09/27 04:32:39 build.go:193: rm -f libqtgeoservices_mapboxgl.so agent:2018/09/27 04:32:39 build.go:193: /opt/android/android-ndk-r16b/toolchains/llvm/prebuilt/darwin-x86_64/bin/clang++ -D__ANDROID_API__=16 -target armv7-none-linux-androideabi -gcc-toolchain /opt/android/android-ndk-r16b/toolchains/arm-linux-androideabi-4.9/prebuilt/darwin-x86_64 -Wl,--exclude-libs,libgcc.a --sysroot=/opt/android/android-ndk-r16b/platforms/android-16/arch-arm/ -Wl,--no-undefined -Wl,-z,origin -Wl,-rpath=\$ORIGIN/../../lib -Wl,--no-undefined -Wl,-z,noexecstack -shared -Wl,-soname,libqtgeoservices_mapboxgl.so -o libqtgeoservices_mapboxgl.so .obj/qgeoserviceproviderpluginmapboxgl.o .obj/qgeomappingmanagerenginemapboxgl.o .obj/qgeomapmapboxgl.o .obj/qmapboxglstylechange.o .obj/qsgmapboxglnode.o .obj/qrc_mapboxgl.o .obj/moc_qgeoserviceproviderpluginmapboxgl.o .obj/moc_qgeomappingmanagerenginemapboxgl.o .obj/moc_qgeomapmapboxgl.o -L/opt/android/android-ndk-r16b/sources/cxx-stl/llvm-libc++/libs/armeabi-v7a -L/Users/qt/work/qt/qtlocation/lib -lQt5Location -L/Users/qt/work/install/lib -lQt5PositioningQuick -lQt5Positioning -lQt5Quick -lQt5Gui -lQt5Qml -lQt5Network -lQt5Concurrent -lQt5Sql -lQt5Core -lGLESv2 -lqmapboxgl -L/opt/android/android-ndk-r16b/sources/cxx-stl/llvm-libc++/libs/armeabi-v7a -L/Users/qt/work/install/lib -lQt5Network -lQt5Gui -lQt5Sql -lQt5Core -lGLESv2 -lc++_shared -llog -lm -ldl -lc -lz agent:2018/09/27 04:32:40 build.go:193: /Users/qt/work/qt/qtlocation/lib/libqmapboxgl.a(collision_feature.o):src/mbgl/text/collision_feature.cpp:function mbgl::CollisionFeature::bboxifyLabel(mbgl::GeometryCoordinates const&, mapbox::geometry::point<short>&, int, float, float, float): error: undefined reference to 'log2' agent:2018/09/27 04:32:40 build.go:193: /Users/qt/work/qt/qtlocation/lib/libqmapboxgl.a(qmapboxgl.o):platform/qt/src/qmapboxgl.cpp:function QMapboxGL::setScale(double, QPointF const&): error: undefined reference to 'log2' agent:2018/09/27 04:32:40 build.go:193: /Users/qt/work/qt/qtlocation/lib/libqmapboxgl.a(qmapboxgl.o):platform/qt/src/qmapboxgl.cpp:function QMapboxGL::scaleBy(double, QPointF const&): error: undefined reference to 'log2' agent:2018/09/27 04:32:40 build.go:193: /Users/qt/work/qt/qtlocation/lib/libqmapboxgl.a(map.o):src/mbgl/map/map.cpp:function mbgl::cameraForLatLngs(std::__ndk1::vector<mbgl::LatLng, std::__ndk1::allocator<mbgl::LatLng> > const&, mbgl::Transform const&, mbgl::EdgeInsets const&): error: undefined reference to 'log2' agent:2018/09/27 04:32:40 build.go:193: clang++: error: linker command failed with exit code 1 (use -v to see invocation) agent:2018/09/27 04:32:40 build.go:193: make[4]: *** [../../../../plugins/geoservices/libqtgeoservices_mapboxgl.so] Error 1 agent:2018/09/27 04:32:40 build.go:193: make[3]: *** [sub-mapboxgl-make_first] Error 2 agent:2018/09/27 04:32:40 build.go:193: make[2]: *** [sub-geoservices-make_first] Error 2 agent:2018/09/27 04:32:40 build.go:193: make[1]: *** [sub-plugins-make_first] Error 2 agent:2018/09/27 04:32:40 build.go:193: make: *** [sub-src-make_first] Error 2
Attachments
Issue Links
- resulted from
-
QTBUG-70631 ld: cannot find -lc++ on NDK r18
-
- Closed
-
For Gerrit Dashboard: QTBUG-70779 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
241376,2 | Revert "Android: Compile with NDK r18 + clang" | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |
241630,12 | qmake: make sure QMAKE_LIBS{,_PRIVATE} comes after LIBS{,_PRIVATE} | 5.12 | qt/qtbase | Status: MERGED | -2 | 0 |