qmake/generators/makefile.cpp
@@ -1012,9 +1012,10 @@ MakefileGenerator::writePrlFile(QTextStream &t)
         t << "QMAKE_PRL_VERSION = " << project->first("VERSION") << endl;
     if(project->isActiveConfig("staticlib") || project->isActiveConfig("explicitlib")) {
         ProStringList libs;
-        libs << "QMAKE_LIBS";
-        if(project->isActiveConfig("staticlib"))
-            libs << "QMAKE_LIBS_PRIVATE";
+        if (!project->isActiveConfig("staticlib"))
+            libs << "LIBS" << "QMAKE_LIBS";
+        else
+            libs << "LIBS" << "LIBS_PRIVATE" << "QMAKE_LIBS" << "QMAKE_LIBS_PRIVATE";
         t << "QMAKE_PRL_LIBS =";
         for (ProStringList::Iterator it = libs.begin(); it != libs.end(); ++it)
             t << qv(project->values((*it).toKey()));
@@ -3345,6 +3346,8 @@ MakefileGenerator::writePkgConfigFile()
 
     if (project->isActiveConfig("staticlib")) {
         ProStringList libs;
+        libs << "LIBS";  // FIXME: this should not be conditional on staticlib
+        libs << "LIBS_PRIVATE";
         libs << "QMAKE_LIBS";  // FIXME: this should not be conditional on staticlib
         libs << "QMAKE_LIBS_PRIVATE";
         libs << "QMAKE_LFLAGS_THREAD"; //not sure about this one, but what about things like -pthread?
